added simple extension api read only